<resources>
    <string name="app_name">Registration</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="heading">Student Registration</string>
    <string name="hint_student_name">Student Name</string>
    <string name="hint_student_email_id">Email_Id</string>
    <string name="hint_student_cell_no">Phone no</string>
    <string name="hint_student_address">Student Address</string>
    <string name="clear_button_text">Clear</string>
    <string name="submit_button_text">Submit</string>
</resources>
