<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ibrahim.registration.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="@string/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/s_name"
                android:hint="@string/hint_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/s_email"
                android:hint="@string/hint_student_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="number"
                android:id="@+id/s_phone_no"
                android:hint="@string/hint_student_cell_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/s_address"
                android:maxLines="3"
                android:hint="@string/hint_student_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:id="@+id/submit"
                    android:text="@string/submit_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_weight="1"
                    android:id="@+id/clear"
                    android:text="@string/clear_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
